--- a/index.html
+++ b/index.html
@@ -3,16 +3,32 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Color combos</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <link href='https://fonts.googleapis.com/css?family=Hind:400,500|Arimo:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
+    <h1 class="color-combos">COLOR COMBOS</h1>
+
+    <p class="color-combos-definicion">Desde hace tiempo vengo utilizando colorable para comprobar el grado de contraste de mis diseños y de los diseños con los que trabajo. Aquí almacenaré los diferentes combos que voy "descubriendo".</p>
+
     <article class="cc1">
-    	<h2 class="cc-clasificacion">AAA</h2>
-    	<h3 class="cc-puntuacion">7.85</h3>
+    	<div class="cc-header">
+    		<h2 class="cc-clasificacion">AAA</h2>
+    		<h3 class="cc-puntuacion">7.85</h3>
+    	</div>
+
+    	<div class="cc-colors">
+    		<p class="cc-background">
+    			#FEC845
+    		</p>
+    		<p class="cc-foreground">
+    			#65065A
+    		</p>
+    	</div>
 
     	<p class="cc-texto">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
