--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
     </head>
     <body>
 
-    <h1 class="color-combos">COLOR COMBOS</h1>
-
-    <p class="color-combos-definicion">Desde hace tiempo vengo utilizando colorable para comprobar el grado de contraste de mis diseños y de los diseños con los que trabajo. Aquí almacenaré los diferentes combos que voy "descubriendo".</p>
-
-    <article class="cc1">
-    	<div class="cc-header">
+    <article class="cc1 cc1-bg">
+    	<div class="cc-header hind ccc1-fg">
     		<h2 class="cc-clasificacion">AAA</h2>
     		<h3 class="cc-puntuacion">7.85</h3>
     	</div>
 
-    	<div class="cc-colors">
+    	<div class="cc-colors arimo">
     		<p class="cc-background">
     			#FEC845
     		</p>
@@ -30,7 +26,7 @@
     		</p>
     	</div>
 
-    	<p class="cc-texto">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+    	<p class="cc-texto arimo ccc1-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
         <script type="text/javascript">
