creando los estilos para la primera combinación de colores :art:

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     </head>
     <body>
 
-    <article class="cc1 cc1-bg">
-    	<div class="cc-header hind ccc1-fg">
-    		<h2 class="cc-clasificacion">AAA</h2>
-    		<h3 class="cc-puntuacion">7.85</h3>
+    <article class="cc cc1-bg">
+    	<div class="cc-header hind ccc1-fg vm">
+    		<h2 class="cc-clasificacion vm">AAA</h2>
+    		<h3 class="cc-puntuacion vm">7.85</h3>
     	</div>
 
-    	<div class="cc-colors arimo">
+    	<div class="cc-colors ccc1-fg arimo">
     		<p class="cc-background">
-    			#FEC845
+    			<span>Background:</span> #FEC845
     		</p>
     		<p class="cc-foreground">
-    			#65065A
+    		  	<span>Foreground:</span> #65065A
     		</p>
     	</div>
 
