creando el segundo combo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
     <body>
 
+    <p class="colorable">Combinaciones creadas con <a href="http://jxnblk.com/colorable/demos/text/">Colorable</a></p>
+
     <article class="cc cc1-bg">
     	<div class="cc-header hind ccc1-fg vm">
     		<h2 class="cc-clasificacion vm">AAA</h2>
@@ -27,6 +29,25 @@
     	</div>
 
     	<p class="cc-texto arimo ccc1-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
+
+    <article class="cc cc1-bg">
+        <div class="cc-header hind ccc1-fg vm">
+            <h2 class="cc-clasificacion vm">AAA</h2>
+            <h3 class="cc-puntuacion vm">7.85</h3>
+        </div>
+
+        <div class="cc-colors ccc1-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #FEC845
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #65065A
+            </p>
+        </div>
+
+        <p class="cc-texto arimo ccc1-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
         <script type="text/javascript">
