creando el tercer combo

--- a/index.html
+++ b/index.html
@@ -32,22 +32,41 @@
 
     </article>
 
-    <article class="cc cc1-bg">
-        <div class="cc-header hind ccc1-fg vm">
+    <article class="cc cc2-bg">
+        <div class="cc-header hind ccc2-fg vm">
             <h2 class="cc-clasificacion vm">AAA</h2>
-            <h3 class="cc-puntuacion vm">7.85</h3>
+            <h3 class="cc-puntuacion vm">11.16</h3>
         </div>
 
-        <div class="cc-colors ccc1-fg arimo">
+        <div class="cc-colors ccc2-fg arimo">
             <p class="cc-background">
-                <span>Background:</span> #FEC845
+                <span>Background:</span> #E1DCE3
             </p>
             <p class="cc-foreground">
-                <span>Foreground:</span> #65065A
+                <span>Foreground:</span> #271764
             </p>
         </div>
 
-        <p class="cc-texto arimo ccc1-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+        <p class="cc-texto arimo ccc2-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
+
+    <article class="cc cc3-bg">
+        <div class="cc-header hind ccc3-fg vm">
+            <h2 class="cc-clasificacion vm">AAA</h2>
+            <h3 class="cc-puntuacion vm">7.34</h3>
+        </div>
+
+        <div class="cc-colors ccc3-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #E4A824
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #242424
+            </p>
+        </div>
+
+        <p class="cc-texto arimo ccc3-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
         <script type="text/javascript">
