--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <p class="colorable">Combinaciones creadas con <a href="http://jxnblk.com/colorable/demos/text/">Colorable</a></p>
 
     <article class="cc cc1-bg">
-    	<div class="cc-header hind ccc1-fg vm">
+    	<div class="cc-header hind cc1-fg vm">
     		<h2 class="cc-clasificacion vm">AAA</h2>
     		<h3 class="cc-puntuacion vm">7.85</h3>
     	</div>
 
-    	<div class="cc-colors ccc1-fg arimo">
+    	<div class="cc-colors cc1-fg arimo">
     		<p class="cc-background">
     			<span>Background:</span> #FEC845
     		</p>
@@ -28,17 +28,17 @@
     		</p>
     	</div>
 
-    	<p class="cc-texto arimo ccc1-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+    	<p class="cc-texto arimo cc1-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
 
     <article class="cc cc2-bg">
-        <div class="cc-header hind ccc2-fg vm">
+        <div class="cc-header hind cc2-fg vm">
             <h2 class="cc-clasificacion vm">AAA</h2>
             <h3 class="cc-puntuacion vm">11.16</h3>
         </div>
 
-        <div class="cc-colors ccc2-fg arimo">
+        <div class="cc-colors cc2-fg arimo">
             <p class="cc-background">
                 <span>Background:</span> #E1DCE3
             </p>
@@ -47,17 +47,17 @@
             </p>
         </div>
 
-        <p class="cc-texto arimo ccc2-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+        <p class="cc-texto arimo cc2-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
 
     <article class="cc cc3-bg">
-        <div class="cc-header hind ccc3-fg vm">
+        <div class="cc-header hind cc3-fg vm">
             <h2 class="cc-clasificacion vm">AAA</h2>
             <h3 class="cc-puntuacion vm">7.34</h3>
         </div>
 
-        <div class="cc-colors ccc3-fg arimo">
+        <div class="cc-colors cc3-fg arimo">
             <p class="cc-background">
                 <span>Background:</span> #E4A824
             </p>
@@ -66,7 +66,25 @@
             </p>
         </div>
 
-        <p class="cc-texto arimo ccc3-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+        <p class="cc-texto arimo cc3-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
+    <article class="cc cc4-bg">
+        <div class="cc-header hind cc4-fg vm">
+            <h2 class="cc-clasificacion vm">AAA</h2>
+            <h3 class="cc-puntuacion vm">9.27</h3>
+        </div>
+
+        <div class="cc-colors cc4-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #E4A824
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #242424
+            </p>
+        </div>
+
+        <p class="cc-texto arimo cc4-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
         <script type="text/javascript">
