--- a/index.html
+++ b/index.html
@@ -77,14 +77,32 @@
 
         <div class="cc-colors cc4-fg arimo">
             <p class="cc-background">
-                <span>Background:</span> #E4A824
+                <span>Background:</span> #E5EDB7
             </p>
             <p class="cc-foreground">
-                <span>Foreground:</span> #242424
+                <span>Foreground:</span> #642626
             </p>
         </div>
 
         <p class="cc-texto arimo cc4-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
+    <article class="cc cc5-bg">
+        <div class="cc-header hind cc5-fg vm">
+            <h2 class="cc-clasificacion vm">AA</h2>
+            <h3 class="cc-puntuacion vm">6.83</h3>
+        </div>
+
+        <div class="cc-colors cc5-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #8D2A2A
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #963636
+            </p>
+        </div>
+
+        <p class="cc-texto arimo cc5-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
         <script type="text/javascript">
