actualizando la estructura

--- a/index.html
+++ b/index.html
@@ -105,6 +105,78 @@
         <p class="cc-texto arimo cc5-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
 
     </article>
+    <article class="cc cc6-bg">
+        <div class="cc-header hind cc6-fg vm">
+            <h2 class="cc-clasificacion vm">AA</h2>
+            <h3 class="cc-puntuacion vm">6.83</h3>
+        </div>
+
+        <div class="cc-colors cc6-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #8D2A2A
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #963636
+            </p>
+        </div>
+
+        <p class="cc-texto arimo cc6-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
+    <article class="cc cc7-bg">
+        <div class="cc-header hind cc7-fg vm">
+            <h2 class="cc-clasificacion vm">AA</h2>
+            <h3 class="cc-puntuacion vm">6.83</h3>
+        </div>
+
+        <div class="cc-colors cc7-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #8D2A2A
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #963636
+            </p>
+        </div>
+
+        <p class="cc-texto arimo cc7-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
+    <article class="cc cc8-bg">
+        <div class="cc-header hind cc8-fg vm">
+            <h2 class="cc-clasificacion vm">AA</h2>
+            <h3 class="cc-puntuacion vm">6.83</h3>
+        </div>
+
+        <div class="cc-colors cc8-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #8D2A2A
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #963636
+            </p>
+        </div>
+
+        <p class="cc-texto arimo cc8-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
+    <article class="cc cc9-bg">
+        <div class="cc-header hind cc9-fg vm">
+            <h2 class="cc-clasificacion vm">AA</h2>
+            <h3 class="cc-puntuacion vm">6.83</h3>
+        </div>
+
+        <div class="cc-colors cc9-fg arimo">
+            <p class="cc-background">
+                <span>Background:</span> #8D2A2A
+            </p>
+            <p class="cc-foreground">
+                <span>Foreground:</span> #963636
+            </p>
+        </div>
+
+        <p class="cc-texto arimo cc9-fg">La Organización Mundial de la Salud (OMS) recoge en sus informes un total de 600 millones de personas con discapacidad. El acceso de estas personas a la tecnología debe tenerse en cuenta en la construcción de una sociedad igualitaria.</p>
+
+    </article>
         <script type="text/javascript">
 
                 var _gaq = _gaq || [];
