actualizando el index con las nuevas combinaciones

--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
     </article>
     <article class="cc cc6-bg">
         <div class="cc-header hind cc6-fg vm">
-            <h2 class="cc-clasificacion vm">AA</h2>
-            <h3 class="cc-puntuacion vm">6.83</h3>
+            <h2 class="cc-clasificacion vm">AAA</h2>
+            <h3 class="cc-puntuacion vm">12.14</h3>
         </div>
 
         <div class="cc-colors cc6-fg arimo">
             <p class="cc-background">
-                <span>Background:</span> #8D2A2A
+                <span>Background:</span> #c0f209
             </p>
             <p class="cc-foreground">
-                <span>Foreground:</span> #963636
+                <span>Foreground:</span> #112524
             </p>
         </div>
 
@@ -125,16 +125,16 @@
     </article>
     <article class="cc cc7-bg">
         <div class="cc-header hind cc7-fg vm">
-            <h2 class="cc-clasificacion vm">AA</h2>
-            <h3 class="cc-puntuacion vm">6.83</h3>
+            <h2 class="cc-clasificacion vm">AAA</h2>
+            <h3 class="cc-puntuacion vm">9.00</h3>
         </div>
 
         <div class="cc-colors cc7-fg arimo">
             <p class="cc-background">
-                <span>Background:</span> #8D2A2A
+                <span>Background:</span> #0fe1be
             </p>
             <p class="cc-foreground">
-                <span>Foreground:</span> #963636
+                <span>Foreground:</span> #431729
             </p>
         </div>
 
@@ -144,15 +144,15 @@
     <article class="cc cc8-bg">
         <div class="cc-header hind cc8-fg vm">
             <h2 class="cc-clasificacion vm">AA</h2>
-            <h3 class="cc-puntuacion vm">6.83</h3>
+            <h3 class="cc-puntuacion vm">7.15</h3>
         </div>
 
         <div class="cc-colors cc8-fg arimo">
             <p class="cc-background">
-                <span>Background:</span> #8D2A2A
+                <span>Background:</span> #f0e7ff
             </p>
             <p class="cc-foreground">
-                <span>Foreground:</span> #963636
+                <span>Foreground:</span> #3243a2
             </p>
         </div>
 
@@ -161,16 +161,16 @@
     </article>
     <article class="cc cc9-bg">
         <div class="cc-header hind cc9-fg vm">
-            <h2 class="cc-clasificacion vm">AA</h2>
-            <h3 class="cc-puntuacion vm">6.83</h3>
+            <h2 class="cc-clasificacion vm">AAA</h2>
+            <h3 class="cc-puntuacion vm">9.92</h3>
         </div>
 
         <div class="cc-colors cc9-fg arimo">
             <p class="cc-background">
-                <span>Background:</span> #8D2A2A
+                <span>Background:</span> #053584
             </p>
             <p class="cc-foreground">
-                <span>Foreground:</span> #963636
+                <span>Foreground:</span> #d2f6fd
             </p>
         </div>
 
